# alembic-linear-migrations

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/alembic_linear_migrations/: __init__.py  cli.py  commands.py  config.py  gitstate.py  head.py  hook.py  rebase.py
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_head.py  test_hook.py  test_integration.py  test_rebase.py
