[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "alembic-linear-migrations"
# CalVer (YYYY.MM.MICRO), derived from the git tag by hatch-vcs. The tag is the
# only source of truth; see [tool.hatch.version] below. Release by tagging
# v2026.7.0 (first release that month), v2026.7.1 (second), and so on.
dynamic = ["version"]
description = "Turn a late Alembic multiple-heads error into an early git conflict."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alexandre Savio", email = "alexsavio@gmail.com" }]
keywords = ["alembic", "migrations", "pre-commit", "git", "sqlalchemy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = ["alembic>=1.9"]

[project.urls]
Homepage = "https://github.com/alexsavio/alembic-linear-migrations"
Source = "https://github.com/alexsavio/alembic-linear-migrations"
Issues = "https://github.com/alexsavio/alembic-linear-migrations/issues"
Changelog = "https://github.com/alexsavio/alembic-linear-migrations/blob/main/CHANGELOG.md"

[project.scripts]
alembic-linear = "alembic_linear_migrations.cli:main"
alembic-linear-update = "alembic_linear_migrations.hook:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "zizmor>=1.27",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# On an exact tag the version is the tag verbatim (v2026.7.0 -> 2026.7.0). Between
# tags, emit an honest post-release dev version (2026.7.0.post1.devN+g<sha>) rather
# than guessing a next tag, which for CalVer is unknowable. A dev build carries a
# local (+g...) segment, so PyPI would reject it -- only an exact tag can publish.
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/alembic_linear_migrations"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/.pre-commit-hooks.yaml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 88
# The floor from requires-python, not the interpreter this runs on: it is what
# ruff holds the syntax to. Same reasoning for mypy's python_version below.
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
warn_unreachable = true

# Annotating every test function and fixture buys nothing, so those two checks
# are off for tests; the rest of strict mode still applies there, and all of it
# applies to src. (tests/ carries an __init__.py so that mypy names the modules
# `tests.*` -- its module patterns only accept `*` as a whole component.)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: needs network or a full pre-commit environment build"]

[tool.coverage.run]
source = ["alembic_linear_migrations"]
branch = true
